refactoring version upgrade